--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "svgo": "^3.3.2",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   },
